--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode production"
+    "build": "webpack --mode development"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +16,8 @@
     "babel-cli": "^6.26.0",
     "babel-preset-react-app": "^3.1.2",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-number-format": "^4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
